[package]
name = "koro8"
version = "0.1.0"
authors = ["Axolotl Fox <foxolotl@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "~0.8"

[dependencies.sdl2]
version = "~0.35"
default-features = false
features = ["static-link", "use-pkgconfig", "image", "mixer"]

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = 'abort'
